// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Item renders connection lines 1`] = `

<gui-selected-item-provider selecteditem="[object Object]">
  <div class="relative">
    <gui-card classname="relative my-4 border-muted">
      <gui-item-header>
      </gui-item-header>
      <div class="w-full">
        <gui-tabs
          onvaluechange="[object Object]"
          value="[object Object]"
        >
          <gui-tabs-list
            variant="ghost"
            classname="w-full gap-2 px-6"
          >
            <gui-overview-tab-button>
            </gui-overview-tab-button>
            <gui-manifest-tab-button>
            </gui-manifest-tab-button>
            <gui-insight-tab-button>
            </gui-insight-tab-button>
            <gui-versions-tab-button>
            </gui-versions-tab-button>
          </gui-tabs-list>
          <gui-overview-tab-content>
          </gui-overview-tab-content>
          <gui-manifest-tab-content>
          </gui-manifest-tab-content>
          <gui-insight-tab-content>
          </gui-insight-tab-content>
          <gui-versions-tab-content>
          </gui-versions-tab-content>
        </gui-tabs>
      </div>
    </gui-card>
    <div class="absolute -right-4 top-[44px] w-4 rounded-tr-sm border-t border-muted">
    </div>
  </div>
</gui-selected-item-provider>

`;

exports[`Item renders with the default structure 1`] = `

<gui-selected-item-provider selecteditem="[object Object]">
  <div class="relative">
    <gui-card classname="relative my-4 border-muted">
      <gui-item-header>
      </gui-item-header>
      <div class="w-full">
        <gui-tabs
          onvaluechange="[object Object]"
          value="[object Object]"
        >
          <gui-tabs-list
            variant="ghost"
            classname="w-full gap-2 px-6"
          >
            <gui-overview-tab-button>
            </gui-overview-tab-button>
            <gui-manifest-tab-button>
            </gui-manifest-tab-button>
            <gui-insight-tab-button>
            </gui-insight-tab-button>
            <gui-versions-tab-button>
            </gui-versions-tab-button>
          </gui-tabs-list>
          <gui-overview-tab-content>
          </gui-overview-tab-content>
          <gui-manifest-tab-content>
          </gui-manifest-tab-content>
          <gui-insight-tab-content>
          </gui-insight-tab-content>
          <gui-versions-tab-content>
          </gui-versions-tab-content>
        </gui-tabs>
      </div>
    </gui-card>
  </div>
</gui-selected-item-provider>

`;
